# hermes-base

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: hermes-oci.yml
deploy/: DESIGN.md
deploy/k8s/: agent-pool-hermes.yaml.example
docs/: agents-runtime-integration.md  vfs-profile-design.md
runtimes/hermes-base/: DESIGN.md  Dockerfile  pyproject.toml
runtimes/hermes-base/src/hermes_base/: app.py  context.py  hermes_cache.py  hermes_stream.py  http_client.py  mcp_bridge.py  profile_lock.py  profile_materializer.py  profile_scope.py  schemas.py  settings.py  user_vfs_profile.py  vfs_errors.py  vfs_profile.py
runtimes/hermes-base/tests/: conftest.py  test_app_invoke.py  test_hermes_cache.py  test_hermes_stream.py  test_mcp_bridge.py  test_multipod_wire.py  test_oci_runtime_slim.py  test_profile_lock.py  test_profile_materializer.py  test_prune_hermes.py  test_session_wire.py  test_user_vfs_profile.py  test_vfs_profile.py  test_vfs_profile_wire.py
scripts/: check-hermes-image-size.sh  check-hermes-install-policy.sh  prune-hermes-packages.sh  stage-docker-build.sh  vendor-hermes.sh
