[project]
name = "hermes-runtime"
version = "0.1.0"
description = "Hermes profile pool runtime for agents-runtime integration"
readme = "README.md"
requires-python = ">=3.12,<3.13"

[tool.uv.workspace]
members = ["runtimes/hermes-base"]

[tool.uv.sources]
runtime-common = { path = "../../works/agents-runtime/packages/common", editable = true }
[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC"]

[tool.ruff.lint.isort]
known-first-party = ["hermes_base", "runtime_common"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["runtimes/hermes-base/tests"]
