[project]
name = "hermes-base"
version = "0.1.0"
description = "agents-runtime pool for deploy_mode=hermes_general (Hermes AIAgent profiles)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "runtime-common",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "opik>=2.0",
    "pyyaml>=6.0",
    # hermes-agent: installed via vendor script (editable) — not pinned in wheel
    # "hermes-agent @ git+https://github.com/NousResearch/hermes-agent.git",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hermes_base"]
